fluxcd/base/kafka-console/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-console
  annotations:
    kubernetes.io/tls-acme: true
    traefik.ingress.kubernetes.io/router.tls: true
    traefik.ingress.kubernetes.io/router.middlewares: auth-grayc-de@file
spec:
  ingressClassName: traefik
  rules:
    - host: kafka.${inoa_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-console
                port:
                  name: http
  tls:
    - hosts:
        - kafka.${inoa_domain}
      secretName: kafka-console-tls
